<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Horizon Remote</string>
    <string name="app_version">1.0-alpha</string>
    
    <string name="controllers">Controllers</string>
    <string name="no_controllers">No controllers</string>
    <string name="settings">Settings</string>
    <string name="settings_version">Application version</string>
    <string name="settings_support">Browse to support forum</string>
    <string name="settings_controllers_summary">Manage your remote controllers</string>
    <string name="settings_controller_name">Name</string>
    <string name="settings_controller_name_summary">Controller description ( e.g. Livingroom )</string>
    <string name="settings_controller_address">Address</string>
    <string name="settings_controller_address_summary">IP address of the mediabox you want to control</string>
        <string name="settings_controller_add">Add controller</string>
    <string name="settings_controller_remove">Remove controller</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="reconnect">Reconnect</string>

    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_back">BACK</string>
    <string name="key_chan_dwn">CH-</string>
    <string name="key_chan_up">CH+</string>
    <string name="key_demand">DEMAND</string>
    <string name="key_down">DOWN</string>
    <string name="key_dvr">DVR</string>
    <string name="key_fwd">FWD</string>
    <string name="key_guide">GUIDE</string>
    <string name="key_help">HELP</string>
    <string name="key_info">INFO</string>
    <string name="key_left">LEFT</string>
    <string name="key_menu">MENU</string>
    <string name="key_ok">OK</string>
    <string name="key_pause">PLAY</string>
    <string name="key_power">POWER</string>
    <string name="key_rec">REC</string>
    <string name="key_right">RIGHT</string>
    <string name="key_rwd">RWD</string>
    <string name="key_stop">STOP</string>
    <string name="key_text">ABC</string>
    <string name="key_tv">TV</string>
    <string name="key_up">UP</string>
    
</resources>
